@@ -12,6 +12,12 @@ For editing language files in The Conquerors, I recommend [url=http://aok.heaven
 [b]Version History[/b]
 Guide makers et cetera, please include the version into which your guide was written.
 
+Version [b]2015.12.10[/b]:
+-Added option to merge shadow from another SLP.
+
+Version [b]2015.12.2[/b]:
+-Terrain restriction tab updated.
+
 Version [b]2015.11.26[/b]:
 -Renamed enable/disable buttons.
 -Added a button to enable automatic backups.
